[TASK] fix gulp tasks and paths

--- a/Resources/Private/Source/config.json
+++ b/Resources/Private/Source/config.json
@@ -1,6 +1,6 @@
 {
   "dist": {
-    "base": "../../../Public/",
+    "base": "./../../Public/",
     "js": "Javascripts/",
     "css": "Stylesheets/"
   }
