--- a/Resources/Private/Source/package.json
+++ b/Resources/Private/Source/package.json
@@ -22,9 +22,11 @@
   "homepage": "https://github.com/scheibome/st_address_map#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-plumber": "^1.1.0",
+    "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.0.1"
+    "gulp-uglify": "^3.0.0"
   }
 }
